# dd

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml
dataset/: README.md  city_statistics.csv  unified_3platform.csv
dataset/lf_data/: labels_only_dev.jsonl  labels_only_test.jsonl  labels_only_train.jsonl  labels_withphrase_dev.jsonl  labels_withphrase_test.jsonl  labels_withphrase_train.jsonl
dataset/splits/: beijing_dev.csv  beijing_test.csv  beijing_train.csv  chengdu_dev.csv  chengdu_test.csv  chengdu_train.csv  fuoshan_dev.csv  fuoshan_test.csv  fuoshan_train.csv  guangzhou_dev.csv  guangzhou_test.csv  guangzhou_train.csv  hangzhou_dev.csv  hangzhou_test.csv  hangzhou_train.csv  hefei_dev.csv  hefei_test.csv  hefei_train.csv  nanjing_dev.csv  (+24 more)
plots/: annotated - label+gemma.csv  annotated - label+qwen.csv  annotated - label+yi.csv  annotated - phrase+gemma.csv  annotated - phrase+qwen.csv  annotated - phrase+yi.csv  plot_annotated_curves.py
scripts/: prepare_data.py  run_experiments.sh
src/: EXPERIMENTS.md  analyze_sensitivity.py  annotation_manual.txt  annotation_manual_en.txt  baseline_multilabel_roberta.py  bias_audit.py  city_profile_analysis.py  city_profile_analysis_share.py  collect_llamafactory_preds.py  cross_platform_analysis.py  eval_llamafactory_checkpoints.py  evaluate_multilabel.py  external_validity.py  make_splits_and_jsonl.py  normalization_comparison.py  prompt_sensitivity.py  run_all_models.sh  run_experiments.py  run_finetune.py  run_icwsm_experiments.py  self_correction_inference.py  unify_data_format.py  vllm_infer.py
(+443 files in other folders)
