[project]
name = "dd3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
llm = [
    "vllm>=0.13.0",
]
